force-app/main/default/objects/TTC_records__c/TTC_records__c.object-meta.xml
<CustomObject>
    <label>TTC Records</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>TTC Collaboration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTC Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>