force-app/main/default/objects/TTC_records__c/fields/Engagement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Summary__c</fullName>
    <label>Engagement Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>