force-app/main/default/objects/TTC_records__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>digital</fullName>
            </value>
            <value>
                <fullName>private</fullName>
            </value>
            <value>
                <fullName>hybrid</fullName>
            </value>
            <value>
                <fullName>public</fullName>
            </value>
            <value>
                <fullName>community</fullName>
            </value>
            <value>
                <fullName>multi</fullName>
                <default>true</default>
                <label>multi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>