force-app/main/default/objects/TTC_records__c/fields/Respond_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Respond_by_Date__c</fullName>
    <label>Respond by Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>