force-app/main/default/objects/TTC_records__c/fields/Technical_information_needed__c.field-meta.xml
<CustomField>
    <fullName>Technical_information_needed__c</fullName>
    <label>Technical information needed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>