force-app/main/default/objects/TTC_records__c/fields/TTC_Action__c.field-meta.xml
<CustomField>
    <fullName>TTC_Action__c</fullName>
    <label>TTC Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
                <default>true</default>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>