force-app/main/default/objects/TTC_records__c/fields/TTC_Comment__c.field-meta.xml
<CustomField>
    <fullName>TTC_Comment__c</fullName>
    <label>TTC Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>