force-app/main/default/objects/TTC_records__c/fields/Use_cases_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_cases_to_Address__c</fullName>
    <label>Use Cases to Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>