force-app/main/default/objects/TTC_records__c/validationRules/respond_by_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>respond_by_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>(((TODAY() + 5 ) &gt;= Respond_by_Date__c)
&amp;&amp; ISNEW())||
(((TODAY() + 5 ) &gt;= Respond_by_Date__c) &amp;&amp; ISCHANGED(Respond_by_Date__c))</errorConditionFormula>
    <errorDisplayField>Respond_by_Date__c</errorDisplayField>
    <errorMessage>Respond by date must be future date and must be atleast after  5 day from CreatedDate</errorMessage>
</ValidationRule>