force-app/main/default/objects/TTC_records__c/validationRules/TTC_record_always_has_lead_or_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>TTC_record_always_has_lead_or_opp</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(  Lead__c  )  ||  ISBLANK(  Opportunity__c ))
 || 
ISBLANK(  Lead__c  )  &amp;&amp;  ISBLANK(   Opportunity__c )</errorConditionFormula>
    <errorMessage>Fill atleast 1 Lead or Opportunity</errorMessage>
</ValidationRule>