force-app/main/default/objects/TTC_records__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TTC_Status__c</columns>
    <columns>Collaboration_Type__c</columns>
    <columns>Scope__c</columns>
    <columns>Engagement_Summary__c</columns>
    <columns>Environment__c</columns>
    <columns>Use_cases_to_Address__c</columns>
    <columns>Technical_information_needed__c</columns>
    <columns>Respond_by_Date__c</columns>
    <columns>TTC_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>