force-app/main/default/objects/TTC_records__c/listViews/TechTeam_TTC_records.listView-meta.xml
<ListView>
    <fullName>TechTeam_TTC_records</fullName>
    <filterScope>Queue</filterScope>
    <label>TechTeam</label>
    <queue>TechTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>